hard-gists/1da13f548200d9fb2b06/run.log
=== Docker Run Log for 1da13f548200d9fb2b06 ===
Started at: Mi 29. Okt 12:47:10 CET 2025

[2025-10-29 12:47:10] START: Running container for 1da13f548200d9fb2b06
[2025-10-29 12:47:10] SUCCESS: Container 1eb042bea784dfdc03a2744143771d0944097abde3311eb700a803524c835c65 started for 1da13f548200d9fb2b06
=== Container logs for 1da13f548200d9fb2b06 ===
  File "/snippet.py", line 48
    print "[*] Saving %s"%content[2]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1da13f548200d9fb2b06 ===
[2025-10-29 12:47:12] INFO: Container 1eb042bea784dfdc03a2744143771d0944097abde3311eb700a803524c835c65 has stopped
